--- a/web/client/index.html
+++ b/web/client/index.html
@@ -13,6 +13,7 @@
     <meta property="og:image" content="https://blackjack.signalwire.me/og-image.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:logo" content="https://blackjack.signalwire.me/og-logo.png">
     <meta property="og:site_name" content="SignalWire Blackjack">
     
     <!-- Twitter Card Meta Tags -->
